Removed additional export SBT_OPTS that is causing failed build for jdk 6 in travis.